VP-487: hearing sitting filter change to accommodate multi day hearing (#141)
* VP-487: hearing sitting filter change to accomodate multi day hearing
* adding filter logic to pick only Trial and Sentence hearing
* populating hearing in sorted order of sitting date